--- a/Urban_cart_ecommerce/src/main/resources/application.properties
+++ b/Urban_cart_ecommerce/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=678
+
+
+
+#spring security
+
+
