--- a/Urban_cart_ecommerce/src/main/resources/application.properties
+++ b/Urban_cart_ecommerce/src/main/resources/application.properties
@@ -11,4 +11,14 @@ server.port=678
 
 #spring security
 
+spring.mail.host=smtp.gmail.com
+spring.mail.username=t01666122@gmail.com
+spring.mail.password=aqxvxbvwlawvesxm
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
+
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
