--- a/BookRide/src/main/resources/application.properties
+++ b/BookRide/src/main/resources/application.properties
@@ -5,14 +5,13 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-pring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.maximum-pool-size=15
-spring.datasource.hikari.auto-commit=true
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.pool-name=HikariPool-3
+
 server.port=1234
 
 spring.mvc.format.date=yyyy-MM-dd
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
 
 
 #spring security
@@ -26,6 +25,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 
-spring.servlet.multipart.max-file-size=50MB
-spring.servlet.multipart.max-request-size=50MB
 
