--- a/Urban_cart_ecommerce/pom.xml
+++ b/Urban_cart_ecommerce/pom.xml
@@ -84,6 +84,12 @@
 			<!--<version>3.3.1</version>-->
 		</dependency>
 
+<dependency>
+    <groupId>com.twilio.sdk</groupId>
+    <artifactId>twilio</artifactId>
+    <version>9.0.0</version>
+</dependency>
+
 	</dependencies>
 
 	<build>
