--- a/MappingCardinality/.project
+++ b/MappingCardinality/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OnetoOneBidirectinal</name>
+	<name>MappingCardinality</name>
 	<comment></comment>
 	<projects>
 	</projects>
